fixed distorted layout

--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,15 @@ body {
   Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 
-/* Skip to Content Link */
 .skip-link {
   position: absolute;             
-  left: 20px;            /* moves it to the left side of the header */
-  background: #1105fc;    /* matches <h1> color */
-  color: white;           /* readable text color */
+  left: 20px;            
+  background: #1105fc;    
+  color: white;           
   font-weight: 700;
   font-size: 16px;
   padding: 4px;
-  transform: translateY(-100%); /* hides it off-screen initially */
+  transform: translateY(-100%); 
 }
 
 .skip-link:focus {
@@ -38,6 +37,14 @@ h1#article-title {
   font-size: 48px;
 }
 
+h2 {
+  font-size: 32px;
+  margin-top: 32px;
+  margin-bottom: 8px;
+  color: #053bfc;
+  clear: both;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -50,9 +57,9 @@ figure {
 }
 
 figure.main-image {
+  color:#ffffff;
   background: rgb(147, 196, 230);
   border-color: #0259bd
-  color #ffffff;
 }
 
 @media all and (min-width: 768px) {
@@ -62,10 +69,16 @@ figure.main-image {
   }
 }
 
-figure.section-image.odd {
-  float: right;
-  margin-left: 20px;
+figure.section-image.odd,
+figure.section-image.even {
+  float: none;
+  margin-left: 0 0 24px 0;
 }
+
+figure.section-image.odd {
+    float: right;
+    margin-left: 20px;
+  }
 
 figure.section-image.even {
   float: left;
